update seats style

--- a/views/cancel.ejs
+++ b/views/cancel.ejs
@@ -1,29 +1,32 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="UTF-8">
-  <title>Theaters List</title>
+  <title>Cancel</title>
   <script>
-     function cancelSeats(){
+    function cancelSeats() {
       //Delete selected-seats
       fetch('http://localhost:3000/delete-select-seat', {
         method: 'DELETE',
         headers: {
-            'Content-Type': 'application/json',
+          'Content-Type': 'application/json',
         },
-        })
+      })
         .then(function (response) {
-            // Handle the server response if needed
+          // Handle the server response if needed
         })
         .catch(function (error) {
-            // Handle any errors that occurred during the request
+          // Handle any errors that occurred during the request
         });
-        window.location.href = '/';
+      window.location.href = '/';
     }
   </script>
 </head>
+
 <body>
   <h1>cancel</h1>
   <button id="cancelButton" onclick="cancelSeats()">Cancel</button>
 </body>
+
 </html>
