--- a/views/success.ejs
+++ b/views/success.ejs
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="UTF-8">
-  <title>Theaters List</title>
+  <title>Success</title>
   <script>
-    window.addEventListener('DOMContentLoaded', function() {
+    window.addEventListener('DOMContentLoaded', function () {
       fetch('http://localhost:3000/transaction-done', {
         method: 'PUT',
       })
@@ -23,15 +24,19 @@
     });
   </script>
 </head>
+
 <body>
   <h1>success</h1>
   <ul>
     <% tickets.forEach(function(ticket) { %>
       <li>
-          <p><%= ticket.ticket_id  %></p>
+        <p>
+          <%= ticket.ticket_id %>
+        </p>
       </li>
-    <% }) %>
+      <% }) %>
   </ul>
   <li><a href="/">Ok</a></li>
 </body>
+
 </html>
