--- a/views/seats.ejs
+++ b/views/seats.ejs
@@ -166,7 +166,7 @@
 <body class="bg-black font-raleway text-cfab7a">
   <section id="movieSeat" class="py-16">
     <div class="container w-1/2 mx-auto">
-      <h1 class="mb-2 text-4xl font-bold">Movie Name</h1>
+      <h1 class="mb-2 text-4xl font-bold ml-3"><%= movieTitle %></h1>
       <div class="grid gap-4 p-4 lg:gap-8 lg:p-8">
         <div class="space-y-4">
           <h1 class="text-2xl font-semibold">Select Seat <%=scheduleId%>
@@ -322,5 +322,4 @@
     </div>
   </footer>
 </body>
-
 </html>
