purhcase confirmation (not finished)

--- a/public/styles/fe_style.css
+++ b/public/styles/fe_style.css
@@ -70,7 +70,11 @@ body{
     color: black;
 }
 
-.custom-btn:hoverblack {
+.custom-btn2 {
+    background-color: black;
+    color: #cfab7a;
+}
+.custom-btn2:hover {
     background-color: black;
     color: #cfab7a;
 }
