--- a/views/seats.ejs
+++ b/views/seats.ejs
@@ -296,7 +296,7 @@
                             </div>
                             <div class="flex flex-col ml-auto">
                               <form action="/pay" method="post">
-                            <input type="submit" value="Buy" onclick="confirmSeats()" class="bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded">
+                            <input type="submit" value="Buy" onclick="confirmSeats()" class="bg-green-500 hover:bg-green-600 text-white font-bold py-2 px-4 rounded mt-2">
                           </form>
                             </div>
                           </div>
