--- a/views/success.ejs
+++ b/views/success.ejs
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8">
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/styles/fe_style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
   <title>Theaters List</title>
   <script>
     window.addEventListener('DOMContentLoaded', function() {
@@ -23,15 +27,38 @@
     });
   </script>
 </head>
-<body>
-  <h1>success</h1>
-  <ul>
-    <% tickets.forEach(function(ticket) { %>
-      <li>
-          <p><%= ticket.ticket_id  %></p>
-      </li>
-    <% }) %>
-  </ul>
-  <li><a href="/">Ok</a></li>
+<body class="bg-black text-cfab7a font-raleway mx-20">
+    <div class="container mx-auto space-y-4">
+  <h1 class="text-4xl font-extrabold mt-10 mx-5 py-5">Payment Succesfull !</h1>
+  <div class="flex items-center mb-3 px-5 py-3 text-sm">
+    <div class="flex flex-col">
+        <span class="text-lg mr-10">Theater</span>
+        <div class="font-semibold">Grand Indonesia</div>
+    </div>
+    <div class="flex flex-col ml-10">
+        <span class="text-lg">Date</span>
+        <div class="font-semibold text-lg">29-05-2023</div>
+    </div>
+</div>
+<div class="flex items-center mb-3 px-5 text-sm">
+    <div class="flex flex-col">
+        <span class="text-lg mr-10">Seats</span>
+        <div class="font-semibold">C4</div>
+    </div>
+    <div class="flex flex-col ml-10">
+        <span class="text-lg">Time</span>
+        <div class="font-semibold text-lg">15:35</div>
+    </div>
+</div>
+    <ul>
+      <% tickets.forEach(function(ticket) { %>
+        <li>
+            <p><%= ticket.ticket_id  %></p>
+        </li>
+      <% }) %>
+    </ul>
+    <li><a href="/">Ok</a></li>
+  </div>
 </body>
 </html>
+
