--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -119,7 +119,9 @@
                     </td>
                     <td>
                       <!--Button untuk bayar-->
-                      <button>Pay</button>
+                      <button id="payButton" class="bg-red-500 hover:bg-red-600 text-white font-bold py-2 px-4 rounded mr-2" onclick="pay('<%= purchase.quantity %>','<%= purchase.total_prices %>')">
+                        Pay
+                       </button>
                     </td>
 
                     <%}%>
@@ -190,6 +192,27 @@
   </footer>
 
   <script>
+    function pay(quantity, total_prices) {
+      //tambah fetch POST insert transaction
+      fetch('http://localhost:3000/pay', {
+        method: 'POST',
+        headers: {
+          'Content-Type': 'application/json',
+        },//quantity, transaction_date
+        body: JSON.stringify({pay_button_clicked:true,quantity, total_prices}),
+      })
+        .then(function (response) {
+
+        })
+        .catch(function (error) {
+          // Handle any errors that occurred during the request
+        });
+
+      setTimeout(function () {
+        makeTickets();
+      }, 500);
+    }
+
     function countdown(element, timestamp) {
       var targetDate = new Date(timestamp).getTime();
       // Update the countdown every second
