--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -119,7 +119,7 @@
                     </td>
                     <td>
                       <!--Button untuk bayar-->
-                      <button id="payButton" class="bg-red-500 hover:bg-red-600 text-white font-bold py-2 px-4 rounded mr-2" onclick="pay('<%= purchase.quantity %>','<%= purchase.total_prices %>')">
+                      <button id="payButton" class="bg-red-500 hover:bg-red-600 text-white font-bold py-2 px-4 rounded mr-2" onclick="pay('<%= purchase.transaction_id%>')">
                         Pay
                        </button>
                     </td>
@@ -192,14 +192,14 @@
   </footer>
 
   <script>
-    function pay(quantity, total_prices) {
+    function pay(transaction_id) {
       //tambah fetch POST insert transaction
-      fetch('http://localhost:3000/pay', {
+      fetch('http://localhost:3000/pay-later', {
         method: 'POST',
         headers: {
           'Content-Type': 'application/json',
         },//quantity, transaction_date
-        body: JSON.stringify({pay_button_clicked:true,quantity, total_prices}),
+        body: JSON.stringify({transaction_id: transaction_id}),
       })
         .then(function (response) {
 
