--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -118,10 +118,13 @@
                         <div class="timer" data-timestamp="<%=purchaseDate%>"></div>
                     </td>
                     <td>
-                      <!--Button untuk bayar-->
-                      <button id="payButton" class="bg-red-500 hover:bg-red-600 text-white font-bold py-2 px-4 rounded mr-2" onclick="pay('<%= purchase.transaction_id%>')">
-                        Pay
-                       </button>
+                      <form method="POST" action="/pay">
+                        <input type="hidden" name="transaction_id" value="<%= purchase.transaction_id %>">
+                        <input type="hidden" name="pay_button_clicked" value="TRUE">
+                        <input type="hidden" name="total_prices" value="<%= purchase.total_prices %>">
+                        <input type="hidden" name="quantity" value="<%= purchase.quantity %>">
+                        <input type="submit" value="Pay">
+                      </form>
                     </td>
 
                     <%}%>
