--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="/styles/fe_style.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+
 </head>
 
 <body class="leading-normal tracking-normal bg-black font-raleway text-cfab7a">
@@ -70,7 +71,9 @@
     <div>
       <div class="px-8 py-4 mb-6 border-2 rounded-md shadow-md border-cfab7a">
         <h2 class="mb-2 text-2xl font-bold text-cfab7a">Ongoing Transaction</h2>
-        <table>
+        <div class="flex overflow-x-auto">
+          <div class="flex-shrink-0 "> <!-- This div holds the list -->
+        <ul class="flex space-x-4 p-4">
           <% purchases.forEach((purchase)=> {
 
             var time = purchase.hours;
@@ -84,54 +87,55 @@
             if((purchase.transaction_status !== 'CANCELED') && (now < purchase.date)){
               console.log(purchase.title + purchase.date );
               %>
+              <div class="rounded-lg p-4 bg-gray-200">
+                     
               
-              <tr>
-              <td>
-                <%= purchase.title %>
-              </td>
-              <td>
-                <%= purchase.date %>
-              </td>
-              <td>
-                <%= purchase.hours %>
-              </td>
-              <td>
-                <%= purchase.studio_name %>
-              </td>
-              <td>
-                <%= purchase.theater_name %>
-              </td>
-              <td>
-                <%= purchase.transaction_status %>
-              </td>
-              <% purchase.seat_numbers.forEach((seat)=> { %>
-                <td>
-                  <%= seat %>
-                </td>
-                <% }); %>
-                  <td>
-                    <%= today - purchase.date %>
-                  </td>
-                  <%if(purchase.transaction_status ==='WAITING'){%>
-                    <td>
-                      <%var purchaseDate=new Date(purchase.payment_max_date); %>
-                        <div class="timer" data-timestamp="<%=purchaseDate%>"></div>
-                    </td>
-                    <td>
-                      <form method="POST" action="/pay">
-                        <input type="hidden" name="transaction_id" value="<%= purchase.transaction_id %>">
-                        <input type="hidden" name="pay_button_clicked" value="TRUE">
-                        <input type="hidden" name="total_prices" value="<%= purchase.total_prices %>">
-                        <input type="hidden" name="quantity" value="<%= purchase.quantity %>">
-                        <input type="submit" value="Pay">
-                      </form>
-                    </td>
-
-                    <%}%>
-            </tr>
+                <p>
+                  <%= purchase.title %>
+                </p>
+                <p>
+                  <%= purchase.date.toLocaleDateString('en-GB') %>
+                </p>
+                <p>
+                  <%= purchase.hours %>
+                </p>
+                <p>
+                  <%= purchase.studio_name %>
+                </p>
+                <p>
+                  <%= purchase.theater_name %>
+                </p>
+                <p>
+                  <%= purchase.transaction_status %>
+                </p>
+                <% purchase.seat_numbers.forEach((seat)=> { %>
+                  <p>
+                    <%= seat %>
+                  </p>
+                  <% }); %>
+                    <%if(purchase.transaction_status ==='WAITING'){%>
+                      <p>
+                        <%var purchaseDate=new Date(purchase.payment_max_date); %>
+                          <div class="timer" data-timestamp="<%=purchaseDate%>"></div>
+                      </p>
+                    
+                        <form method="POST" action="/pay">
+                          <input type="hidden" name="transaction_id" value="<%= purchase.transaction_id %>">
+                          <input type="hidden" name="pay_button_clicked" value="TRUE">
+                          <input type="hidden" name="total_prices" value="<%= purchase.total_prices %>">
+                          <input type="hidden" name="quantity" value="<%= purchase.quantity %>">
+                          <input type="submit" value="Pay">
+                        </form>
+                   
+  
+                      <%}%>
+             
+              </div>
+         
             <% } }); %>
-        </table>
-
+        </ul>
+      </div>
+    </div>
         <!-- Display for Transaction History -->
         <div>
           <div class="my-5 border-t-2 border-cfab7a"></div>
@@ -195,6 +199,8 @@
   </footer>
 
   <script>
+
+
     function pay(transaction_id) {
       //tambah fetch POST insert transaction
       fetch('http://localhost:3000/pay-later', {
