user register and login alert

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -165,7 +165,7 @@
                                     <div class="modal" id="myModal">
                                         <div class="modal-content">
                                             <span class="close" onclick="closeModal()">×</span>
-                                            <p>Phone number must have a valid format</p>
+                                            <p>Phone number must have a valid format,such as the presence of a country code, parentheses around the area code, and the use of hyphens, dots, or spaces as separators</p>
                                         </div>
                                     </div>
                                 <% } %>
