--- a/views/registerAdmin.ejs
+++ b/views/registerAdmin.ejs
@@ -20,28 +20,6 @@
             <div class="w-full max-w-xl p-8">
                 <h2 class="mb-6 text-3xl font-bold font-raleway">Admin Register</h2>
                 <form method="POST" action="/register-admin">
-                    <% if (UsernameAvailability==false) { %>
-                        <p>Username is already taken.</p>
-                        <% } %>
-                            <% if ( EmailAvailability==false) { %>
-                                <p>Email is already taken.</p>
-                                <% } %>
-                                    <% if (usernameRegexAllowed==false) { %>
-                                        <p>consist of 8 to 30 characters, including uppercase and lowercase
-                                            letters, numbers, underscores, and hyphens..</p>
-                                        <% } %>
-                                            <% if (emailRegexAllowed==false) { %>
-                                                <p>Ensures that the email address contains a username part,
-                                                    followed by the "@" symbol, a domain part, and a valid
-                                                    top-level domain.</p>
-                                                <% } %>
-                                                    <% if (passwordRegexAllowed==false) { %>
-                                                        <p>At least one lowercase letter, at least one
-                                                            uppercase letter, at least one digit, matches
-                                                            any combination of alphanumeric characters and
-                                                            special characters (non-whitespace) with a
-                                                            minimum length of 8.</p>
-                                                        <% } %>
                                                             <div class="px-3 py-8 font-semibold rounded gold-btn">
                                                                 <div class="mb-4">
                                                                     <label for="username"
@@ -49,6 +27,34 @@
                                                                     <input type="text" id="username" name="username"
                                                                         class="w-full px-4 py-2 border border-gray-300 rounded"
                                                                         placeholder="Insert username" required>
+                                                                        <% if (UsernameAvailability==false) { %>
+                                                                            <div class="relative px-4 py-3 text-red-700 bg-red-100 border border-red-400 rounded"
+                                                                                role="alert">
+                                                                                <strong class="font-bold">Username already taken</strong>
+                                                                                <span class="absolute top-0 bottom-0 right-0 px-4 py-3">
+                                                                                    <svg class="w-6 h-6 text-red-500 fill-current" role="button"
+                                                                                        xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+                                                                                        <title>Close</title>
+                                                                                        <path
+                                                                                            d="M14.348 14.849a1.2 1.2 0 0 1-1.697 0L10 11.819l-2.651 3.029a1.2 1.2 0 1 1-1.697-1.697l2.758-3.15-2.759-3.152a1.2 1.2 0 1 1 1.697-1.697L10 8.183l2.651-3.031a1.2 1.2 0 1 1 1.697 1.697l-2.758 3.152 2.758 3.15a1.2 1.2 0 0 1 0 1.698z" />
+                                                                                    </svg>
+                                                                                </span>
+                                                                            </div>
+                                                                            <% } %>
+                                                                                <% if (usernameRegexAllowed==false) { %>
+                                                                                    <div class="relative px-4 py-3 text-red-700 bg-red-100 border border-red-400 rounded"
+                                                                                        role="alert">
+                                                                                        <strong class="font-bold">Usernames must be 8-30 characters long, including uppercase/lowercase letters, numbers, underscores, and hyphens.</strong>
+                                                                                        <span class="absolute top-0 bottom-0 right-0 px-4 py-3">
+                                                                                            <svg class="w-6 h-6 text-red-500 fill-current" role="button"
+                                                                                                xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+                                                                                                <title>Close</title>
+                                                                                                <path
+                                                                                                    d="M14.348 14.849a1.2 1.2 0 0 1-1.697 0L10 11.819l-2.651 3.029a1.2 1.2 0 1 1-1.697-1.697l2.758-3.15-2.759-3.152a1.2 1.2 0 1 1 1.697-1.697L10 8.183l2.651-3.031a1.2 1.2 0 1 1 1.697 1.697l-2.758 3.152 2.758 3.15a1.2 1.2 0 0 1 0 1.698z" />
+                                                                                            </svg>
+                                                                                        </span>
+                                                                                    </div>
+                                                                                    <% } %>
                                                                 </div>
                                                                 <div class="mb-4">
                                                                     <label for="email"
@@ -56,6 +62,34 @@
                                                                     <input type="email" id="email" name="email"
                                                                         class="w-full px-4 py-2 border border-gray-300 rounded"
                                                                         placeholder="example@email.com" required>
+                                                                        <% if (emailRegexAllowed==false) { %>
+                                                                            <div class="relative px-4 py-3 mb-2 text-red-700 bg-red-100 border border-red-400 rounded"
+                                                                                role="alert">
+                                                                                <strong class="font-bold">Email address must have a valid format.</strong>
+                                                                                <span class="absolute top-0 bottom-0 right-0 px-4 py-3">
+                                                                                    <svg class="w-6 h-6 text-red-500 fill-current" role="button"
+                                                                                        xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+                                                                                        <title>Close</title>
+                                                                                        <path
+                                                                                            d="M14.348 14.849a1.2 1.2 0 0 1-1.697 0L10 11.819l-2.651 3.029a1.2 1.2 0 1 1-1.697-1.697l2.758-3.15-2.759-3.152a1.2 1.2 0 1 1 1.697-1.697L10 8.183l2.651-3.031a1.2 1.2 0 1 1 1.697 1.697l-2.758 3.152 2.758 3.15a1.2 1.2 0 0 1 0 1.698z" />
+                                                                                    </svg>
+                                                                                </span>
+                                                                            </div>
+                                                                            <% } %>
+                                                                                <% if ( EmailAvailability==false) { %>
+                                                                                    <div class="relative px-4 py-3 text-red-700 bg-red-100 border border-red-400 rounded"
+                                                                                        role="alert">
+                                                                                        <strong class="font-bold">Email is already taken</strong>
+                                                                                        <span class="absolute top-0 bottom-0 right-0 px-4 py-3">
+                                                                                            <svg class="w-6 h-6 text-red-500 fill-current" role="button"
+                                                                                                xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+                                                                                                <title>Close</title>
+                                                                                                <path
+                                                                                                    d="M14.348 14.849a1.2 1.2 0 0 1-1.697 0L10 11.819l-2.651 3.029a1.2 1.2 0 1 1-1.697-1.697l2.758-3.15-2.759-3.152a1.2 1.2 0 1 1 1.697-1.697L10 8.183l2.651-3.031a1.2 1.2 0 1 1 1.697 1.697l-2.758 3.152 2.758 3.15a1.2 1.2 0 0 1 0 1.698z" />
+                                                                                            </svg>
+                                                                                        </span>
+                                                                                    </div>
+                                                                                    <% } %>
                                                                 </div>
                                                                 <div class="grid grid-cols-2 gap-4">
                                                                     <div class="mb-4">
@@ -65,6 +99,20 @@
                                                                             name="password"
                                                                             class="w-full px-4 py-2 border border-gray-300 rounded"
                                                                             placeholder="Insert password" required>
+                                                                            <% if (passwordRegexAllowed==false) { %>
+                                                                                <div class="relative px-4 py-3 text-red-700 bg-red-100 border border-red-400 rounded"
+                                                                                    role="alert">
+                                                                                    <strong class="font-bold">Password must be at least 8 characters long and include at least one lowercase letter, one uppercase letter, and one digit.</strong>
+                                                                                    <span class="absolute top-0 bottom-0 right-0 px-4 py-3">
+                                                                                        <svg class="w-6 h-6 text-red-500 fill-current" role="button"
+                                                                                            xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+                                                                                            <title>Close</title>
+                                                                                            <path
+                                                                                                d="M14.348 14.849a1.2 1.2 0 0 1-1.697 0L10 11.819l-2.651 3.029a1.2 1.2 0 1 1-1.697-1.697l2.758-3.15-2.759-3.152a1.2 1.2 0 1 1 1.697-1.697L10 8.183l2.651-3.031a1.2 1.2 0 1 1 1.697 1.697l-2.758 3.152 2.758 3.15a1.2 1.2 0 0 1 0 1.698z" />
+                                                                                        </svg>
+                                                                                    </span>
+                                                                                </div>
+                                                                                <% } %>
                                                                     </div>
                                                                     <div class="mb-4">
                                                                         <label for="confirmPassword"
